Document delete token by id.
